Code refactor, variables names changed, amount column deleted

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,15 +3,9 @@
     <string name="accept_button_text">Accept</string>
     <string name="cancel_button_text">Cancel</string>
     <string name="total_value_string">Total:</string>
-    <string name="_7">7</string>
-    <string name="_8">8</string>
-    <string name="_9">9</string>
-    <string name="calculator_clear_button">C</string>
-    <string name="_4">4</string>
-    <string name="_5">5</string>
-    <string name="_6">6</string>
-    <string name="_1">1</string>
-    <string name="_2">2</string>
-    <string name="_3">3</string>
-    <string name="_0">0</string>
+    <string name="dish_name">Name of the dish</string>
+    <string name="amount_of_dishes">2</string>
+    <string name="dish_price">100$</string>
+    <string name="dish_total_price">200$</string>
+    <string name="total_sum">0</string>
 </resources>
