--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="products_in_selected_menu">Selected menu:</string>
     <string name="all_available_products">All available products:</string>
     <string name="new_product">New product</string>
+    <string name="apply_menu">Apply menu</string>
 </resources>
